# inglued

./: CMakeLists.txt  README.md  ROADMAP.md  embed.py  generate.sh  inclusive.cpp  inclusive.hpp  proto.sh
doc/: CMAKE_SUPPORT.md  logo.xcf
doc/rationale/: WHY_HEADER_ONLY.md
doc/upcoming/: README.md  inglued-ui-tool.xml
examples/simple/: compile_user_code-inclusive.sh  compile_user_code-system.sh  compile_user_code.sh  example_user_code.cpp
examples/simple/include/somelib/: deps.hpp  inclusive.hpp  somelib.hpp
src/: deps-meld.cpp  glue.cpp  inclusive.hpp  inglued.cpp
src/inglued/: cmakelist_tpl.hpp  dep.hpp  generate_cmakelists.hpp  generate_install_doc.hpp  install_doc_tpl.hpp  tpl.hpp
src/inglued/adapter/: boostorg.hpp
